# nanogpt-experiment_0

./: .gitignore  README.md  pyproject.toml
nanogpt/: config.py  dataset.py  train.py
nanogpt/conf/: config.yaml
nanogpt/lit/: lit_gpt.py  lit_tokenizer.py
nanogpt/models/: gpt.py  nn.py
nanogpt/nn/: gpt.py
utils/tokenizer/: tokenizer_vocab_500.json
